--- a/src/Resource_Files/dark/mac_dark_scrollbar.css
+++ b/src/Resource_Files/dark/mac_dark_scrollbar.css
@@ -24,3 +24,5 @@ a:visited {
 ::-webkit-scrollbar-corner {
     background: rgb(61,61,61);
 }
+
+::-webkit-scrollbar {display: block;}
